# Sofia

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
backend/: enivornemt.yml  pyproject.toml
backend/src/sofia/: index.py
flutter/: README.md  pubspec.yaml
flutter/lib/: main.dart
flutter/macos/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
test/: widget_test.dart
web/: index.html
