[tool.poetry]
name = "sofia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    {include = "sofia", from = "src/"},
]


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Flask = "^3.0.3"
pandas = "~1.5.1"
numpy = "1.23.5"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"